--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.18"
+    "echarts": "^5.6.0",
+    "element-plus": "^2.10.5",
+    "pinia": "^3.0.3",
+    "vue": "^3.5.18",
+    "vue-echarts": "^7.0.3",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
